Fix visibility of mobile dropdown header

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -177,6 +177,7 @@
     &-items,
     &-user-menu {
       display: none;
+      z-index: 9999;
     }
     &-toggled {
       .#{$provider-prefix}-header {
